[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["bwpge <bwpge.dev@gmail.com>"]
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"

[dependencies.clap]
version = "4.4.11"
features = ["cargo", "color", "derive", "string", "wrap_help"]

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "git2"] }
